welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:5: error: not found: value A
		case A => avance();
                     ^BDRBuggle:6: error: not found: value B
		case B => avance(); avance();
                     ^BDRBuggle:7: error: not found: value R
		case R => droite(); avance();
                     ^BDRBuggle:8: error: not found: value L
		case L => gauche(); avance();
                     ^BDRBuggle:9: error: not found: value Z
		case Z => recule();
                     ^BDRBuggle:10: error: not found: value Y
		case Y => recule(); recule();
                     ^BDRBuggle:11: error: not found: value X
		case X => recule(); recule(); recule();
                     ^